Fix form input elements to align more

--- a/style.css
+++ b/style.css
@@ -1,24 +1,58 @@
+
+
+body {
+  background-color: #E3E3E3;
+  /*border: 1px solid tomato;*/
+  /*overflow: auto;*/
+  /*width: 500px;*/
+  font-size:16px;
+}
+
 article {
   display: flex;
   flex-wrap: wrap;
   /*width: 900px;*/
-  max-width:480px;
-  border: 2px solid blue;
+  width:480px;
+  /*border: 4px solid blue;*/
+/*allows article to be centered*/
   margin: auto;
 }
 
 #mainForm, #resultContainerDiv {
-  margin: 5px auto;
-  padding: 1px 15px;
-  min-width:200px;
-  max-width:240px;
+  /*allows form and div, to position themselves in middle:*/
+ margin: 5px auto;
+  padding: 0 15px;
+  width:190px;
+  /*min-width:200px;
+  max-width:540px;
   min-height: 385px;
-  max-height: 390px;
+  max-height: 390px;*/
   background-color: #ffffff;
    /*border: 23px solid green;*/
    border-radius: 5px;
    box-shadow: 0 4px 9px -3px rgba(0, 0, 0, 0.67);
-   text-align: center;
+     /*text-align: center;*/
+}
+
+/*p {
+  text-align: center;
+  max-width: 160px;
+}*/
+
+h4 {
+  color: rgb(110, 180, 49);
+  font-weight: 800;
+  text-align: center;
+  /*nice orange*/
+  /*color: #FFCC00;
+  color: #F3A51B;*/
+}
+
+input {
+width: 45px;
+font-size:12px;
+border-radius:1px;
+/*padding: 0px;*/
 }
 
 /*Disable huge blue border that shows in in Chrome when selecting on input fields*/
@@ -26,75 +60,32 @@ input:focus {
     outline:none;
 }
 
-body {
-  background-color: #E3E3E3;
-  /*border: 1px solid tomato;*/
-  /*overflow: auto;*/
-  /*width: 500px;*/
-}
-
-p {
-  text-align: center;
-  max-width: 160px;
-}
-
-h4 {
-  color: rgb(110, 180, 49);
-  font-weight: 800;
-  text-align: center;
-
-  /*nice orange*/
-  /*color: #FFCC00;
-  color: #F3A51B;*/
-}
-
-.fa {
-  border: 1px solid red;
-}
-
-/*make the li the flex container, while the label
-and input elements are the flex items inside*/
-.formFields li {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 2px;
-  border: 1px solid cyan;
-
-}
-/*flex item 1*/
-label {
-  flex: 1 0 130px;
-  /*max width prevents the labels from getting too wide*/
-  max-width: 60px;
-  text-align: right;
-  margin-right: 4px;
-  /*flex: 2 0 70px;*/
-  /*background-color: pink;*/
-   border: 1px solid tomato;
-}
-
-/*flex item 2*/
-/*using attribute selector to select all input types w/ number*/
-input[type="number"]{
-  flex: 2 0 230px;
+/*.fa {
   border: 1px solid green;
-  max-width: 70px;
-  /*flex: 1 0 90px;*/
-  /*background-color: red;*/
-background-color: #E3E3E3;
-background-color: #F9F9F9;
-padding: 0.15em 0.45em;
-font-size: 15px;
-border-radius: 2px;
-box-sizing: border-box;
-max-height: 2em;
+}*/
+
+ul {
+  padding:0;
+text-align:center;
+/*margin: auto;*/
+  /*border: 1px solid cyan;*/
+/*margin: auto;*/
 }
 
 
+.formFields li {
+  /*border: 1px solid goldenrod;*/
+  list-style-type:none;
+
+}
 
 
-
-
+.formFields label{
+  /*background-color:red;*/
+  width: 120px;
+  float: left;
+  /*border: 1px solid blue;*/
+}
 
 
 
